...
    android:layout_height="match_parent"
    android:clipToPadding="false"
    style="@style/MainContainer"
    >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

...
            <TextView
                style="@style/OptionTitle"
                android:text="@string/option_visualizer_title" />
            <LinearLayout style="@style/LinearLayoutOptionsCheckBoxHorizontal"
                android:id="@+id/ll_visualizer_on">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_visualizer_on"
                    style="@style/OptionCheckBox"/>
                <TextView
                    android:id="@+id/tx_Visualizer_on"
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_visualizer_text_01" />
            </LinearLayout>
            <LinearLayout style="@style/LinearLayoutOptionsCheckBoxHorizontal"
                android:id="@+id/ll_visualizer_playpause">
                <com.google.android.material.checkbox.MaterialCheckBox
...
