...
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.BookPlayer.Button.Secondary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Cancel" />

...
                            app:icon="@drawable/ic_content_copy_24px"
                            app:iconSize="16dp"
                            app:iconGravity="textStart"
                            android:text="@string/import_option_copy" />
                        <com.google.android.material.button.MaterialButton
                            style="@style/MaterialButtonForToggleGroup"
                            android:id="@+id/btnLink"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_marginHorizontal="4dp"
                            app:icon="@drawable/ic_link_2_24px"
                            app:iconSize="16dp"
                            app:iconGravity="textStart"
...
