...
    <item
        android:id="@+id/nav_library"
        android:title="@string/nav_library"
        android:icon="@drawable/ic_books_movies_and_music_24px" />

    <item
        android:id="@+id/nav_add"
        android:title="@string/nav_add_book"
        android:icon="@drawable/ic_add_book_24" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
...
